fp-macros/tests/ui/missing_semicolon.stderr
error: expected `;`
  --> tests/ui/missing_semicolon.rs:13:5
   |
13 |     }
   |     ^
